--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: #c2fcb8; /* Light blue */
+        }
+    </style>
 </head>
 <body>
     <img src="https://picsum.photos/200/300" alt="random">
